# Fundamentals-of-Programming

./: README.md  YS Resume+CV.docx
Assignment_4/: Box.cpp  Box.h  Clock.cpp  Clock.h  Q_1.cpp
Assignment_5/: BasicShape.cpp  BasicShape.h  CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  main.cpp
Assignments/Assignment 1/: Q1.cpp  Q2.cpp  assignment_1.cpp  notes.txt  yury_stanev_assignment_1.docx
C++ Practice/Week 1/: hello_world.cpp
C++ Practice/Week 2/: Q3.cpp  q1.cpp  q2.cpp
C++ Practice/Week 3/: Q1.cpp  Q2.cpp  Q3.cpp  Q4.cpp
C++ Practice/Week 3/Class/: class_notes.cpp  class_practice.cpp
C++ Practice/Week 4/: Q1.cpp  Q2.cpp  Q3.cpp  Q5.cpp
C++ Practice/Week_5_Practice/: Q5_v1.cpp  week5_q1.cpp  week5_q2.cpp  week5_q4.cpp  week5_q6_v1.cpp
Final Exam Practice/: Ch12_Q11.cpp  Ch12_Q15.cpp  Ch12_Q16.cpp  Ch12_Q3.cpp  Ch12_Q6.cpp  Ch12_Q8.cpp  Ch13_Q2.cpp  Ch13_Q5.cpp
Midterm_Practice/: CMakeLists.txt  Q1  Q1.cpp  Q2  Q2.cpp  Q3.cpp  Q5_A.cpp  Q7.cpp  Q7_v2.cpp  Q7_v3.cpp
SFMLDemo/: BS.cpp  CMakeLists.txt  main.cpp
SFMLDemo/cmake_modules/: FindSFML.cmake
assignment_2/: A2_Q1.cpp  A2_Q2.cpp  A2_Q2_v2.cpp  Q1.cpp  Q2.cpp  a2_q1.cpp
assignment_3/: DNA.txt  Q1.cpp  Q1_v2.cpp  RNA.txt  data.txt  q2.cpp  q2_v2.cpp  wave.txt
